# Quantum-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
assets/: README.md  assets
include/quantum/: AnimatedSprite.h  CollisionBox.h  Color.h  EventListener.h  ExtraTools.h  Game.h  Game2D.h  Game3D.h  GameObject.h  Libraries.h  Math.h  ParallaxScrolling.h  RenderizableAsset.h  ResourceManager.h  Scene.h  SceneManager.h  Sprite.h  SpriteAnimation.h  SpriteSheet.h  SpriteSheetAnimation.h  Vector2.h  Vector2D.h  Vector3.h  Vector3D.h  Window.h
include/quantum/components/: Component.h  ComponentsList.h
include/quantum/components/2D/: AssetRenderer.h  BoxCollider.h  Camera.h  CircleCollider.h  Collisions.h  Physics.h  Transform2D.h
include/quantum/systems/2D/: AssetRendering.h  Collisions.h  Physics.h
project/: CMakeCache.txt  Makefile  Quantum_Engine.sublime-project  Quantum_Engine.sublime-workspace  cmake_install.cmake
project/res/Artemis-Cpp/: Artemis-Cpp.sublime-project  Makefile  cmake_install.cmake
project/res/SDL2/: Makefile  SDL2.sublime-project  cmake_install.cmake  sdl2-config  sdl2.pc
project/res/SDL2/include/: SDL_config.h
project/res/jsoncpp/: JsonCpp.sublime-project  Makefile  cmake_install.cmake
res/include/: Artemis  json
src/: main.cpp
src/engine/: AnimatedSprite.cpp  CollisionBox.cpp  Color.cpp  EventListener.cpp  ExtraTools.cpp  Game.cpp  Game2D.cpp  Game3D.cpp  GameObject.cpp  Math.cpp  ParallaxScrolling.cpp  RenderizableAsset.cpp  ResourceManager.cpp  Scene.cpp  SceneManager.cpp  Sprite.cpp  SpriteAnimation.cpp  SpriteSheet.cpp  SpriteSheetAnimation.cpp  Vector2.cpp  Vector2D.cpp  Vector3.cpp  Vector3D.cpp  Window.cpp
src/engine/components/: Component.cpp
src/engine/components/2D/: AssetRenderer.cpp  BoxCollider.cpp  Camera.cpp  CircleCollider.cpp  Collisions.cpp  Physics.cpp  Transform2D.cpp
src/engine/systems/2D/: AssetRendering.cpp  Collisions.cpp  Physics.cpp
src/game/: TestGame2D.cpp  TestGame2D.h  TestGame3D.cpp  TestGame3D.h
src/game/scenes/: TestScene.cpp  TestScene.h  TestScene3D.cpp  TestScene3D.h
